package br.com.banco.conta.Exception;

public class LimiteEspecialInvalidoException extends RuntimeException {

    public LimiteEspecialInvalidoException(String message) {
        super(message);
    }
}
